# ir-project

./: .env.example  .gitignore  README.md  build_indices.py  build_indices.sh  build_indices_bm25.sh  build_indices_bm25_sharding.sh  build_indices_sharding.py  build_indices_splade.sh  build_indices_splade_sharding.sh  build_owi_splade.py  code.ipynb  experiments.sh  ir-tests.ipynb  ir_datasets_owi.py  ir_system.py  main.ipynb  main.py  owi_index_test.py  owi_splade_results.csv  owi_test.py  owi_test_run.sh  pyproject.toml  requirements.txt  run_experiments.py  run_experiments.sh  run_experiments_optimised.py  run_experiments_optimised.sh  run_owi_test.sh
.ipynb_checkpoints/: code-checkpoint.ipynb  main-checkpoint.py  main2-checkpoint.py
.ir_datasets/disks45/corpus/FR94/01/: FR940104.0z  FR940104.1z  FR940104.2z  FR940105.0z  FR940105.1z  FR940105.2z  FR940106.0z  FR940106.1z  FR940106.2z  FR940110.0z  FR940110.1z  FR940110.2z  FR940111.0z  FR940111.1z  FR940111.2z  FR940112.0z  FR940112.1z  FR940112.2z  FR940114.0z  FR940114.1z  FR940114.2z  FR940118.0z  FR940118.1z  FR940118.2z  FR940119.0z  FR940119.1z  FR940119.2z  FR940124.0z  FR940124.1z  FR940124.2z  FR940125.0z  FR940125.1z  FR940125.2z  FR940126.0z  FR940126.1z  FR940126.2z  FR940127.0z  FR940127.1z  FR940127.2z  FR940128.0z  (+2 more)
.ir_datasets/disks45/corpus/FR94/02/: FR940202.0z  FR940202.1z  FR940202.2z  FR940203.0z  FR940203.1z  FR940203.2z  FR940204.0z  FR940204.1z  FR940204.2z  FR940207.0z  FR940207.1z  FR940207.2z  FR940208.0z  (+23 more)
scripts/: prepare_cluster.sh  setup_virtual_environment.sh  sync_csedu.sh
(+402 files in other folders)
