[project]
name = "ir-project"
version = "0.1.0"
description = "Implementation of the Build an IR system from Scratch project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-terrier",
    "ir_datasets",
    "tqdm",
    "pandas",
    "more_itertools",
    "transformers>=4.30.0",
    "huggingface_hub>=0.14.0",
    "splade @ git+https://github.com/naver/splade.git",
    "pyt_splade @ git+https://github.com/cmacdonald/pyt_splade.git",
    "torch",
]

[tool.uv]
override-dependencies = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
]
